--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           ISSUE_NUMBER=$(echo "${{ github.event.issue.number }}") 
           SOME_VAR : 'v1'
-          BRANCH_NAME: '${issue.number}-${%SOME_VAR}-${issue.title}'
+          BRANCH_NAME: '${issue.number}-${SOME_VAR}-${issue.title}'
           git checkout -b $BRANCH_NAME
           git push origin $BRANCH_NAME
 
