--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Create branch
         run: |
           ISSUE_NUMBER=$(echo "${{ github.event.issue.number }}")
-          BRANCH_NAME='${{ github.event.issue.number }}-${{ github.event.issue.title }}'
+          BRANCH_NAME='feature/${{ github.event.issue.number }}'
           git checkout -b $BRANCH_NAME
           git push origin $BRANCH_NAME
 
