fix : GITHUB_TOKEN 추가하여 workflows 에러 처리해보기

--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/github-script@v3
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
         with:
           script: |
             github.issues.createComment({
