fix : Comment on issue 제거해서 원인파악

--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -16,16 +16,18 @@ jobs:
         run: |
           ISSUE_NUMBER=$(echo "${{ github.event.issue.number }}")
           BRANCH_NAME='feature/${{ github.event.issue.number }}'
+          git checkout -b $BRANCH_NAME
+          git push origin $BRANCH_NAME
 
-      - name: Comment on issue
-        uses: actions/github-script@v3
-        env:
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-        with:
-          script: |
-            github.issues.createComment({
-              issue_number: Number(process.env.ISSUE_NUMBER),
-              body: 'Branch has been created for this issue.'
-            })
+#      - name: Comment on issue
+#        uses: actions/github-script@v3
+#        env:
+#          ISSUE_NUMBER: ${{ github.event.issue.number }}
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#        with:
+#          script: |
+#            github.issues.createComment({
+#              issue_number: Number(process.env.ISSUE_NUMBER),
+#              body: 'Branch has been created for this issue.'
+#            })
