--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -18,6 +18,8 @@ jobs:
           BRANCH_NAME='feature/${{ github.event.issue.number }}'
           git checkout -b $BRANCH_NAME
           git push origin $BRANCH_NAME
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 #      - name: Comment on issue
 #        uses: actions/github-script@v3
