fix : issue에 comment 남기는 부분 수정

--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -31,5 +31,7 @@ jobs:
           script: |
             github.issues.createComment({
               issue_number: Number(process.env.ISSUE_NUMBER),
+              owner: context.repo.owner,
+              repo: context.repo.repo,
               body: 'Branch has been created for this issue.'
             })
