--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -33,5 +33,5 @@ jobs:
               issue_number: Number(process.env.ISSUE_NUMBER),
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Branch has been created for this issue. \n feature/${%issue_number}'
+              body: 'Branch has been created for this issue. \n feature/${issue_number}'
             })
