[style] issue 및 branch 생성시 발생 comment 문구 수정

--- a/.github/workflows/create-issue-branch.yml
+++ b/.github/workflows/create-issue-branch.yml
@@ -31,7 +31,7 @@ jobs:
           script: |
             const issueNumber = Number(process.env.ISSUE_NUMBER);
             const branchName = `feature/${issueNumber}`;
-            const body = `Branch has been created for issue ${issueNumber}. \n${branchName}`;
+            const body = `Branch has been created for issue ${issueNumber} and ${branchName}`;
             github.issues.createComment({
               issue_number: issueNumber,
               owner: context.repo.owner,
