--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.2.10.RELEASE'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
