--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     properties:
       hibernate:
         default_batch_fetch_size: 100
+  data:
+    redis:
+      host: localhost
+      port: 6379
 logging:
   level:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
