--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
     redis:
       host: localhost
       port: 6379
+  profiles:
+    include: secret
 logging:
   level:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
